syntax = "proto3";

package todo.v1;

option csharp_namespace = "Todo.V1";
option go_package = "github.com/sagikazarmark/todobackend-go-kit/api/todo/v1;todo";
option java_multiple_files = true;
option java_outer_classname = "TodoProto";
option java_package = "com.todo.v1";
option objc_class_prefix = "TXX";
option php_namespace = "Todo\\V1";

import "todo/v1/todo.proto";
import "google/protobuf/wrappers.proto";

// TodoListService manages a list of todo items.
service TodoListService {
  // AddItem adds a new item to the list.
  rpc AddItem (AddItemRequest) returns (AddItemResponse);

  // ListItems returns a list of items.
  rpc ListItems (ListItemsRequest) returns (ListItemsResponse);

  // DeleteItems deletes all items from the list.
  rpc DeleteItems (DeleteItemsRequest) returns (DeleteItemsResponse);

  // GetItem returns the details of an item.
  rpc GetItem (GetItemRequest) returns (GetItemResponse);

  // UpdateItem updates an existing item.
  rpc UpdateItem (UpdateItemRequest) returns (UpdateItemResponse);

  // DeleteItem deletes an item from the list.
  rpc DeleteItem (DeleteItemRequest) returns (DeleteItemResponse);
}

message AddItemRequest {
  string title = 1;
  int32 order = 2;
}

message AddItemResponse {
  TodoItem item = 1;
}

message ListItemsRequest {
}

message ListItemsResponse {
  repeated TodoItem items = 1;
}

message DeleteItemsRequest {
}

message DeleteItemsResponse {
}

message GetItemRequest {
  string id = 1;
}

message GetItemResponse {
  TodoItem item = 1;
}

message UpdateItemRequest {
  string id = 1;

  google.protobuf.StringValue title = 2;
  google.protobuf.BoolValue completed = 3;
  google.protobuf.Int32Value order = 4;
}

message UpdateItemResponse {
  TodoItem item = 1;
}

message DeleteItemRequest {
  string id = 1;
}

message DeleteItemResponse {
}
